--- a/SubSandbox-3 - Randomness/sandbox2.html
+++ b/SubSandbox-3 - Randomness/sandbox2.html
@@ -48,8 +48,20 @@
    ============================================================ -->
 
     <div class="container">
-        <div class="card">
-            <div class="card__image"></div>
+        <div class="card1">
+            <div class="card__image-container">
+                <img src="//unsplash.it/200/500" alt="" class="card__img">
+            </div>
+
+            <div class="card__content">
+                <h2 class="card__title">A Cool Product</h2>
+                <p class="card__subtitle">that you should buy!</p>
+                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro
+                    earum eveniet molestias fugiat maiores libero deserunt facilis officiis sit. Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Minus, nobis.</p>
+                <p class="card__price">$399.99</p>
+                <a href="#" class="card__button">Buy Now</a>
+            </div>
         </div>
     </div>
     <!-- !/CONTAINER -->
